syntax = "proto3";
import "bullet.proto";
import "location.proto";

service BattleService {
    rpc Battle (BattleRequest) returns (BattleReply) {
    }
}

message BattleRequest {
    int32 engineX = 1;
    int32 engineY = 2;
    int32 weaponX = 3;
    int32 weaponY = 4;
    bool weapon_fire = 5;
}

message BulletInfo {
    Bullet_Type bullet_type = 1;
    Location bullet_location = 2;
}

message BattleReply {
    repeated BulletInfo bullet_info = 1;
    string envrionment_info = 2;
}